--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,10 @@ jobs:
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: read
+      id-token: write
 
     steps:
       - uses: actions/setup-node@v3
@@ -33,7 +37,8 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: package.tgz
-
-      - run: npm publish --access public package.tgz
+          
+      - run: npm install -g npm
+      - run: npm publish --provenance --access public package.tgz
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
