--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
         with:
           persist-credentials: false
       - uses: cprecioso/action-prepare-node@v1
+
+      # Build and upload code
       - run: yarn pack -o package.tgz
       - uses: actions/upload-artifact@v3
         with:
@@ -20,10 +22,17 @@ jobs:
           path: package.tgz
           if-no-files-found: error
 
+      # Build and upload docs
+      - run: yarn run build-docs
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: "./out-docs"
+
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: read
       id-token: write
@@ -37,8 +46,25 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: package.tgz
-          
+
       - run: npm install -g npm
       - run: npm publish --provenance --access public package.tgz
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
+  publish-docs:
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
