--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "react": "^18"
   },
   "devDependencies": {
-    "@cprecioso/tsconfig": "^2.0.0",
-    "@types/react": "^18.0.34",
-    "prettier": "^2.8.7",
-    "prettier-plugin-organize-imports": "^3.2.2",
-    "prettier-plugin-pkg": "^0.17.1",
-    "prettier-plugin-sh": "^0.12.8",
-    "tsup": "^6.7.0",
+    "@cprecioso/tsconfig": "^2.0.1",
+    "@types/react": "^18.2.23",
+    "prettier": "3.0.3",
+    "prettier-plugin-organize-imports": "3.2.3",
+    "prettier-plugin-pkg": "0.18.0",
+    "prettier-plugin-sh": "0.13.1",
+    "tsup": "^7.2.0",
     "typedoc": "^0.25.1",
-    "typescript": "^5.0.4"
+    "typescript": "~5.2.2"
   },
   "sideEffects": false
 }
