--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "Carlos Precioso",
   "license": "MIT",
-  "packageManager": "yarn@3.6.3",
+  "packageManager": "yarn@4.0.2+sha256.825003a0f561ad09a3b1ac4a3b3ea6207af2796d54f62a9420520915721f5186",
   "main": "./dist/index.mjs",
   "types": "./dist/index.d.mts",
   "files": [
