--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@cprecioso/tsconfig": "^2.0.1",
     "@types/react": "^18.3.3",
     "prettier": "3.3.3",
